cmake_minimum_required(VERSION 3.10)
project(design_pattern)

set(CMAKE_CXX_STANDARD 17)
set(CXX_STANDARD_REQUIRED True)

set(ROOT_BIN_OUT_DIR ${PROJECT_SOURCE_DIR}/bin)
set(ROOT_ARC_OUT_DIR ${ROOT_BIN_OUT_DIR})
set(ROOT_LIB_OUT_DIR ${ROOT_BIN_OUT_DIR})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${ROOT_ARC_OUT_DIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${ROOT_LIB_OUT_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${ROOT_BIN_OUT_DIR})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${ROOT_ARC_OUT_DIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG ${ROOT_LIB_OUT_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${ROOT_BIN_OUT_DIR})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${ROOT_ARC_OUT_DIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE ${ROOT_LIB_OUT_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${ROOT_BIN_OUT_DIR})

add_subdirectory(${PROJECT_SOURCE_DIR}/creating_pattern)
add_subdirectory(${PROJECT_SOURCE_DIR}/structural_pattern)