add_executable(chain chain.cpp)
add_executable(command command.cpp)
add_executable(interpreter interpreter.cpp)
add_executable(iterator iterator.cpp)
add_executable(mediator mediator.cpp)
add_executable(memento memento.cpp)
add_executable(observer observer.cpp)
add_executable(state state.cpp)
add_executable(strategy strategy.cpp)
add_executable(template template.cpp)
add_executable(visitor visitor.cpp)